--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node-modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.0",
+    "csv-parse": "^5.3.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
