--- a/package.json
+++ b/package.json
@@ -5,31 +5,36 @@
   "author": "Dimas Alves Pereira <dimasdevspro@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node-modules --respawn src/server.ts"
-  },
-  "dependencies": {
-    "@types/multer": "^1.4.7",
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^9.0.0",
-    "csv-parse": "^5.3.3",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "swagger-ui-express": "^4.6.0",
-    "uuid": "^9.0.0"
+    "dev": "ts-node-dev --inspect --poll --transpile-only --ignore-watch node-modules --respawn src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@typescript-eslint/eslint-plugin": "^5.47.2-alpha.3",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "7.21.0",
+    "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.23",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "csv-parse": "^5.0.4",
+    "express": "^4.17.3",
+    "multer": "^1.4.4",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
+    "typeorm": "0.2.45",
+    "uuid": "^8.3.2"
   }
 }
