--- a/package.json
+++ b/package.json
@@ -6,35 +6,35 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --poll --transpile-only --ignore-watch node-modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/data-source.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.16",
     "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.23",
+    "@types/node": "^18.11.18",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "eslint": "^8.12.0",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.3"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "csv-parse": "^5.0.4",
+    "csv-parse": "^5.3.4",
     "express": "^4.17.3",
-    "multer": "^1.4.4",
-    "pg": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "0.2.45",
-    "uuid": "^8.3.2"
+    "typeorm": "^0.3.11",
+    "uuid": "^9.0.0"
   }
 }
