--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --poll --transpile-only --ignore-watch node-modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/data-source.ts"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js -d src/database/data-source.ts",
+    "migration:create": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
@@ -34,6 +35,7 @@
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "tsyringe": "^4.7.0",
     "typeorm": "^0.3.11",
     "uuid": "^9.0.0"
   }
